# or-tools-wasm

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CP_SAT_TEST_MIGRATION.txt  LINEAR_SOLVER_PYTHON_TESTS_STATUS.txt  MATHOPT_PYTHON_TEST_ROSTER.md  README.md  ROUTING_TEST_PORTING_ROSTER.md  bugs.md  package-lock.json  package.json  tsconfig.json  vite.lib.config.ts  vite.site.config.ts
.github/workflows/: package.yml  server.yml
benchmarking/: README.md  run.sh
benchmarking/docker/: wasm-bun.Dockerfile  wasm-deno.Dockerfile  wasm-node.Dockerfile  web-chromium.Dockerfile
bridge-types/: buf.gen.yaml  cp_sat.proto  job.proto  knapsack.proto  mathopt.proto  mp_solver.proto  network_flow.proto  pdlp.proto  routing.proto  set_cover.proto
cmake/: cpp.cmake
cmake/dependencies/: CMakeLists.txt
docs/: api.md  bundlers.md
docs/test-audit/: solver-python-test-parity-audit.md  solver-python-test-roster.md
javascript/: cp_sat_api.cc  mathopt_api.cc  mp_solver_api.cc  package.json  routing_api.cc  tsconfig.json  vite.lib.config.ts
javascript/lib/: cp-sat.ts  cp_sat_api.ts  cpsat_worker.ts  cpsat_worker_types.ts  executor_configuration.ts  graph_api.ts  index.ts  knapsack.ts  mathopt.ts  mathopt_api.ts  mp-solver.ts  mp_solver_api.ts  network-flow.ts  ortools_worker.ts  pdlp.ts  pdlp_api.ts  rcpsp.ts  routing.ts  routing_api.ts  runtime_loader.ts  runtime_loader_core.ts  runtime_loader_node.ts  server_bridge.ts  set-cover.ts  set_cover_api.ts  solver_bridge.ts  solver_executor.ts  solver_server_executor.ts  solver_worker.ts  worker_bridge.ts  worker_helpers.ts  worker_protocol.ts  worker_routing.ts
javascript/lib/cp_sat/: api.ts  executor.ts  high_level_api.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/knapsack/: api.ts  executor.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/mathopt/: api.ts  executor.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/mp_solver/: api.ts  executor.ts  native_runtime.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/network_flow/: api.ts  executor.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/pdlp/: api.ts  executor.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/rcpsp/: api.ts
javascript/lib/routing/: api.ts  executor.ts  native_runtime.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/lib/set_cover/: api.ts  executor.ts  server_executor.ts  worker.ts  worker_executor.ts
javascript/site/: bop_project_selection.html  bop_project_selection.ts  cbc_simple_mip.html  clp_simple_lp.html  clp_transportation.html  clp_transportation.ts  code_highlight.ts  cp_sat_executor_selector.ts  example.css  glop_simple_lp.html  glop_simple_lp.ts  glop_stigler_diet.html  glop_stigler_diet.ts  glpk_simple_lp.html  glpk_simple_mip.html  gscip_simple_mip.html  gscip_simple_mip.ts  index.html  knapsack_simple.html  knapsack_simple.ts  magic_square.html  magic_square.ts  mathopt_basic.html  mathopt_basic.ts  mathopt_factory_floor.html  mathopt_factory_floor.ts  mathopt_integer.html  mathopt_integer.ts  mathopt_sample_helpers.ts  mathopt_scheduling.html  mathopt_scheduling.ts  mathopt_simple.html  mathopt_simple.ts  model_playground.html  model_playground.ts  mp_simple_lp.html  mp_simple_lp.ts  mp_simple_mip.html  mp_simple_mip.ts  mp_solver_helpers.ts  (+32 more)
javascript/tests/specs/: solver-fixture.spec.ts
package/: package-lock.json  package.json  tsconfig.json  vite.lib.config.ts  vite.site.config.ts
package/tests/: playwright.config.ts
package/tests/specs/: solver-fixture.spec.ts
patches/: scip-v10.0.0.patch  soplex-v8.0.0.patch
scripts/: build_browser_sources.mjs  build_node_sources.mjs  build_wasm.sh  generate_sat_parameters_types.mjs  patch_emscripten_runtime.mjs  prepare_package_readme.mjs
server/: .env.sample  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
server/src/: cp_sat_executor.cc  cp_sat_executor.h  cp_sat_executor_test.cc  http_server.cc  http_server.h  http_server_integration_test.cc  job_scheduler.cc  job_scheduler.h  job_scheduler_test.cc  knapsack_executor.cc  knapsack_executor.h  knapsack_executor_test.cc  main.cc  mathopt_executor.cc  mathopt_executor.h  mathopt_executor_test.cc  mp_solver_executor.cc  mp_solver_executor.h  mp_solver_executor_test.cc  network_flow_executor.cc  network_flow_executor.h  network_flow_executor_test.cc  pdlp_executor.cc  pdlp_executor.h  pdlp_executor_test.cc  routing_executor.cc  routing_executor.h  routing_executor_test.cc  server_config.cc  server_config.h  server_config_test.cc  set_cover_executor.cc  set_cover_executor.h  set_cover_executor_test.cc  solver_executor.h  solver_job_routes.cc  solver_job_routes.h  solver_job_service.cc  solver_job_service.h  solver_job_service_test.cc
tests/: playwright.config.ts
tests/fixtures/: install-packed-package.mjs
tests/fixtures/browser-basic-src/: browser_fixture_main.ts  cpsat_high_level_runner.ts  cpsat_runner.ts  cpsat_solver_structure_runner.ts  cpsat_types.ts  knapsack_runner.ts  mathopt_examples_plan.md  mathopt_model_contract.ts  mathopt_runner.ts  mathopt_solve_result_contract.ts  mp_solver_runner.ts  network_flow_runner.ts  pdlp_runner.ts  rcpsp_runner.ts  routing_runner.ts  set_cover_runner.ts  shared_case.ts
tests/fixtures/bun-basic/: basic.test.ts  cp_sat.test.ts  knapsack.test.ts  mathopt.test.ts  mixed_runtime.test.ts  mp_solver.test.ts  network_flow.test.ts  package.json  pdlp.test.ts  rcpsp.test.ts  routing.test.ts  set_cover.test.ts  shared.ts
tests/fixtures/deno-basic/: basic.test.ts  package.json
tests/fixtures/node-basic/: basic.test.ts  package.json
tests/fixtures/rollup-basic/: package-lock.json  package.json
tests/fixtures/rollup-basic/src/: main.ts
tests/fixtures/vite-basic/: package-lock.json  package.json  vite.config.ts
tests/fixtures/vite-basic/src/: main.ts
tests/fixtures/webpack-basic/: package-lock.json  package.json
tests/fixtures/webpack-basic/src/: main.ts
tests/specs/: vite-basic.spec.ts
(+9 files in other folders)
